--- a/geonode/layers/templates/layers/_layer_list_item.html
+++ b/geonode/layers/templates/layers/_layer_list_item.html
@@ -1,64 +1,39 @@
-{% load url from future %}
+{% extends "layers/layer_base.html" %}
 {% load i18n %}
-{% load agon_ratings_tags %}
-{% load layers_tags %}
-{% load base_tags %}
+{% load staticfiles %}
+{% load url from future %}
 
-{% overall_rating layer "layer" as layer_rating %}
-{% num_ratings layer as num_votes %}
 
-<article>
-  <div class="content">
-    <div class="item-header">
-      <a href="{% url "layer_detail" layer.typename %}"><img class="thumb" src="{{ layer.get_thumbnail_url }}" /></a>
-      <h3><i class="icon-unchecked icon-rotate-45"></i> <a href="{% url "layer_detail" layer.typename %}">{{ layer.title }}</a></h3>
-    </div>
-    <div class="details">
-      <div class="meta">
-        <p>Layer {% trans 'from' %} <a href="{% url "profile_detail" layer.owner.username %}">{{ layer.owner }}</a>, {{ layer.date|timesince }} {% trans 'ago' %}</p>
-        <p class="abstract">{{ layer.abstract }}</p>
-        <ul class="nav stats">
-          <li><a href="{% url "layer_detail" layer.typename %}"><strong>{{ layer.popular_count }}</strong> {% trans "view" %}{{ layer.popular_count|pluralize }}</a></li>
-          <li><a href="{% url "layer_detail" layer.typename %}#rate"><strong><span class="avg_rating" data-rating="{{ layer_rating }}"> <span class="overall_rating"></span></span></strong> {% trans "Average rating" %} ({{num_votes}} {% trans "votes" %})</a></li>
-        </ul>
-      </div> <!-- /.meta -->
-      <div class="tools">
-        <p>
-          <a href="#download-{{layer.id}}" data-toggle="modal" class="btn btn-mini">{% trans "Download" %}</a>
-          <a href="{% url "new_map" %}?layer={{ layer.typename }}" class="btn btn-mini">{% trans "Create a map" %}</a>
-        </p>
+{% block body %}
+
+  <div class="row">
+    <div class="col-md-9">
+      <div class="col-md-3">
+        <span>Total: </span>
+        <span ng-bind="total_counts"></span>
       </div>
-    </div> <!-- /.details -->
-  </div> <!-- /.content -->
 
-
-  <div class="modal custom hide" id="download-{{layer.id}}">
-    <div class="modal-header">
-      <button class="close" data-dismiss="modal">×</button>
-      <h2><i class="icon-download-alt"></i>  {% trans "Download Layer" %} "{{layer.title}}"</h2>
-    </div>
-    <div class="modal-body">
-    </div>
-    <div class="modal-footer">
-      {% if layer.link_set.download|length > 0 %}
-        {% for link in layer.link_set.download %}
-        {% if forloop.counter0 == 0 %}
-        <div class="span2 offset1">
-          <ul class="unstyled">
-            <li><a href="{{ link.url }}">{{ link.name }}</a></li>
-        {% elif forloop.counter0 >= forloop.revcounter0 and forloop.revcounter0|add:1 >= forloop.counter0 %}
-          </ul>
-        </div>
-        <div class="span2">
-          <ul class="unstyled">
-            <li><a href="{{ link.url }}">{{ link.name }}</a></li>
-        {% else %}
-            <li><a href="{{ link.url }}">{{ link.name }}</a></li>
-        {% endif %}
-        {% endfor %}
-        </ul>
+      <div class="col-md-12 grid-spacer">
+        {% include 'base/_resourcebase_snippet.html' %}
       </div>
-    {% endif %}
     </div>
   </div>
-</article>
+
+{% endblock %}
+
+{% block extra_script %}
+  {% if GEONODE_SECURITY_ENABLED %}
+    {% include "_permissions_form_js.html" %}
+  {% endif %}
+  <script type="text/javascript">
+      {% if HAYSTACK_SEARCH %}
+          SEARCH_URL = '{% url 'api_get_search' api_name='api' resource_name='base' %}?type__in=layer'
+      {% else %}
+          SEARCH_URL = '{% url 'api_dispatch_list' api_name='api' resource_name='layers' %}';
+      {% endif %}
+    FILTER_TYPE = 'layer';
+  </script>
+  {% with include_spatial='true' %}
+  {% include 'search/search_scripts.html' %}
+  {% endwith %}
+{% endblock extra_script %}
