--- a/geonode/datarequests/templates/datarequests/profile_detail.html
+++ b/geonode/datarequests/templates/datarequests/profile_detail.html
@@ -167,7 +167,7 @@
 
       {% if request_profile.request_status == 'pending'%}
         <li class="list-group-item">
-          <button class="btn btn-primary btn-md btn-block" data-toggle="modal" data-target="#approve-request" id="approve-button">{% trans "Approve" %}</button>
+          <button class="btn btn-primary btn-md btn-block" data-target="#approve-request" id="approve-button">{% trans "Approve" %}</button>
         </li>
 
         <div class="modal fade" id="approve-request" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
