fixed some typo errors

--- a/geonode/datarequests/templates/datarequests/profile_detail.html
+++ b/geonode/datarequests/templates/datarequests/profile_detail.html
@@ -184,7 +184,7 @@
                 <h4 class="modal-title" id="myModalLabel">{% trans "Approve Data Request Profile" %}</h4>
               </div>
               <div class="modal-body">
-                <p>Please make sure that an Active Directory account has been created based on the credentials in this page before approving. Are your sure you want to approve this data request profile?</p>
+                <p>Please make sure that an Active Directory account has been created based on the credentials in this page before approving. Are you sure you want to approve this data request profile?</p>
               </div>
               <div class="modal-footer">
                 <button type="button" id="approve_request_cancel" class="btn btn-default" data-dismiss="modal">{% trans "Cancel" %}</button>
