latest layers show 5 layers only. updated index.html, search.js

--- a/geonode/templates/index.html
+++ b/geonode/templates/index.html
@@ -47,7 +47,7 @@
     <div class="row body-bottom"> -->
         <div class="col-md-12 grid-spacer ">
           <span class="total-layers" >Total: </span>
-          <span ng-bind="total_counts" class="total-layers"></span>
+          <span ng-bind="latest_layers" class="total-layers"></span>
           {% include 'base/_resourcebase_snippet.html' %}
         </div>
       </div>
