[TEMP] Remove layer_style_manage from the template.

--- a/geonode/layers/templates/layers/layer_detail.html
+++ b/geonode/layers/templates/layers/layer_detail.html
@@ -203,7 +203,7 @@
                   {% if preview == 'geoext' %}
                   <a class="btn btn-default btn-block btn-xs style-edit" data-dismiss="modal" href="#">{% trans "Edit" %}</a>
                   {% endif %}
-                  <a class="btn btn-default btn-block btn-xs" href="{% url "layer_style_manage" resource.service_typename %}">{% trans "Manage" %}</a>
+                  <a class="btn btn-default btn-block btn-xs" href="">{% trans "Manage" %}</a>
                 </div>
                 {% endif %}
               {% endif %}
