added a section in data registration for uploading a data request letter

--- a/geonode/datarequests/templates/datarequests/registration/shapefile.html
+++ b/geonode/datarequests/templates/datarequests/registration/shapefile.html
@@ -73,7 +73,13 @@
         <h5>{% trans "Files to be uploaded" %}</h5>
         <div id="file-queue"></div>
       </section>
-
+    
+    
+        <legend>Data Request Letter</legend>     
+        <form id="document-uploader" method="post" enctype="multipart/form-data">
+          <input class="btn" id="document-input" type="file">
+      </form>
+        
       <br />
       <section class="widget">
         {{ form }}
