Added contact details to About Page.

--- a/geonode/templates/about.html
+++ b/geonode/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "site_base.html" %}
 
 {% load i18n %}
-{% block title %} {% trans "About GeoNode" %} — {{ block.super }} {% endblock %}
+{% block title %} {% trans "About LiPAD" %} — {{ block.super }} {% endblock %}
 
 {% block body_outer %}
 <div class="page-header">
@@ -9,12 +9,18 @@
 </div>
 <p class="lead">{% trans "LiPAD: LiDAR Portal for Archiving and Distribution system aims to facilitate the exchange of information across all components of the Phil LiDAR Program, including all affiliated SUCs and HEIs across the country, through the use of web standard protocols." %}</p>
 <p>The site is powered by <a href="http://www.geonode.org" title="GeoNode Website">GeoNode</a> and is maintained by the Data Archiving and Distribution Component of the <a href="https://www.dream.upd.edu.ph/about-us/phil-lidar-1/" title="About the Phil-LiDAR 1 Program">Phil-LiDAR 1 Program</a>.</p>
-  <p>The objectives of the Component are as follows:</p>					
+  <p>The objectives of the Component are as follows:</p>
 	<ol>
 		<li>Distribute LiDAR and LiDAR derived datasets to partner State Universities and Colleges and Higher Education Institutions, and other stakeholders;</li>
-		<li>Develop a LiDAR database and distribution system;</li>					
+		<li>Develop a LiDAR database and distribution system;</li>
         <li>Enhance the data archiving skills of State Universities and Colleges personnel to ensure the proper management and distribution of Lidar data.</li>
      </ol>
-  <p><a href="http://www.geonode.org" title="GeoNode Website">GeoNode</a> is an Open Source, Content Management System (CMS) for geospatial data. It is a web-based application and platform for developing geospatial information systems (GIS) and for deploying spatial data infrastructures (SDI).</p>
+<h3>Contact <a href="mailto:lipad@dream.upd.edu.ph">LiPAD</a></h3>
+<p>Rm. 312-216, National Engineering Center,<br />
+University of the Philippines, Diliman, Quezon City<br />
+1101 Philippines</p>
 
+<p>Tel. No.: (02) 981 8770<br />
+Fax No.: (02) 981 8771<br />
+E-mail address: <a href="mailto:lipad@dream.upd.edu.ph">lipad@dream.upd.edu.ph</a></p>
 {% endblock %}
